<resources>
    <string name="app_name">win10计算器</string>
    <string name="button1">1</string>
    <string name="btn_0">0</string>
    <string name="btn_c">C</string>
    <string name="btn_divide">/</string>
    <string name="btn_multipy">x</string>
    <string name="btn_back">退格</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_mins">—</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_add">+</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_equal">=</string>
    <string name="btn_percent">%</string>
    <string name="btn_decimal">.</string>
</resources>