<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    android:columnCount="4"
    android:orientation="horizontal"
    android:rowCount="6"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/et_result"
        android:layout_rowWeight="3"
        android:layout_columnSpan="4"
        android:layout_columnWeight="4"
        android:autofillHints=""
        android:gravity="end|bottom"
        android:inputType="number"
        android:text="0"
        android:textSize="48sp" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_c"
        android:textColor="#FF6666"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_divide"
        android:textColor="#FF6666"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_multipy"
        android:textColor="#FF6666"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF" />

    <Button
        android:id="@+id/btn_del"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_back"
        android:textColor="#FF6666"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF" />

    <Button
        android:id="@+id/btn_7"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_7"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"
       />

    <Button
        android:id="@+id/btn_8"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_8"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

    <Button
        android:id="@+id/btn_9"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_9"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

    <Button
        android:id="@+id/btn_minus"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_mins"
        android:textColor="#FF6666"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        />

    <Button
        android:id="@+id/btn_4"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_4"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

    <Button
        android:id="@+id/btn_5"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_5"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

    <Button
        android:id="@+id/btn_6"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_6"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"

        android:gravity="center"
        android:text="@string/btn_add"
        android:textColor="#FF6666"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF" />

    <Button
        android:id="@+id/btn_1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/button1"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

    <Button
        android:id="@+id/btn_2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_2"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

    <Button
        android:id="@+id/btn_3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_3"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

    <Button
        android:id="@+id/btn_equal"
        android:layout_rowSpan="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_equal"
        android:textColor="#FF6666"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF" />

    <Button
        android:id="@+id/btn_percent"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_percent"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

    <Button
        android:id="@+id/btn_0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_0"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

    <Button
        android:id="@+id/btn_point"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/btn_decimal"
        android:textSize="28sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#FF6666"/>

</GridLayout>